# iot-lab2

./: .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-0795e51ed1a27ca0d56ba76d42be3e135c95d1e7ae9833e062fc70b4deb61227.json  query-9f12a80360ede872c7506efc3abb28ad67055c8d958ddd3806e635144596f67d.json  query-c86de387bd871365b8bb1dba38725fed11317ff005249dcaf93b758f4210972b.json  query-d9b096480b319a4885f548d83d4a693b80c18e43b8ec199f4a0b38bedb6dbf81.json
configuration/: base.toml  local.toml
docker/: docker-compose.yml
src/: config.rs  lib.rs  main.rs  service.rs
src/control/: http.rs  ws.rs
src/data/: model.rs  repo.rs
